# friday-tony-stark-demo

./: .env.example  README.md  agent_friday.py  pyproject.toml  server.py
friday/tools/: web.py
